teste promise.all

--- a/public/index.html
+++ b/public/index.html
@@ -78,6 +78,7 @@
 <script src="app/lancamentos/lancamentos.client.module.js"></script>
 <script src="app/lancamentos/config/lancamentos.client.routes.js"></script>
 <script src="app/lancamentos/controllers/lancamentos.client.controller.js"></script>
+<script src="app/lancamentos/directives/lancamentos.client.directives.js"></script>
 <script src="app/lancamentos/filters/lancamentos.client.filters.js"></script>
 <script src="app/lancamentos/services/lancamentos.client.service.js"></script>
 
@@ -87,6 +88,7 @@
 <script src="app/demonstrativos/controllers/demonstrativos.client.controller.js"></script>
 <script src="app/demonstrativos/directives/demonstrativos.client.directives.js"></script>
 <script src="app/demonstrativos/services/demonstrativos.client.service.js"></script>
+<script src="app/demonstrativos/services/demonstrativos.client.component.js"></script>
 
 <script src="app/application.js"></script>
 <script src="app/directives.js"></script>
