ainda fuçando o caixa

--- a/public/index.html
+++ b/public/index.html
@@ -73,6 +73,7 @@
 <script src="app/caixas/config/caixas.client.routes.js"></script>
 <script src="app/caixas/controllers/caixas.client.controller.js"></script>
 <script src="app/caixas/services/caixas.client.service.js"></script>
+<script src="app/caixas/services/caixas.client.component.js"></script>
 
 <!--Scripts Lancamentos-->
 <script src="app/lancamentos/lancamentos.client.module.js"></script>
