--- a/public/index.html
+++ b/public/index.html
@@ -76,6 +76,7 @@
 <script src="app/caixas/controllers/caixas.client.controller.js"></script>
 <script src="app/caixas/services/caixas.client.service.js"></script>
 <script src="app/caixas/services/caixas.client.component.js"></script>
+<script src="app/caixas/filters/caixas.client.filters.js"></script>
 
 <!--Scripts Lancamentos-->
 <script src="app/lancamentos/lancamentos.client.module.js"></script>
