--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link rel="stylesheet" href="bower_components/angular-datepicker/dist/angular-datepicker.css"> <!-- Angular DatePicker -->
     <link rel="stylesheet" href="bower_components/angular-moment-picker/dist/angular-moment-picker.css"> <!-- Angular-Moment-Picker -->
+    <link rel="stylesheet" href="bower_components/footable/css/footable.core.css"> <!-- Footable CSS -->
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
-
     <link rel="stylesheet" href="bower_components/select2/dist/css/select2.css"> <!-- Select 2 -->
     <link rel="stylesheet" href="bower_components/sweetalert/dist/sweetalert.css"> <!-- SweetAlert -->
     <link rel="stylesheet" href="bower_components/c3/c3.css">
@@ -51,6 +51,9 @@
 <script src="bower_components/c3/c3.min.js"></script>
 <script src="bower_components/c3-angular/c3-angular.js"></script>
 
+<!-- Angular Footable -->
+<script src="bower_components/footable/dist/footable.all.min.js"></script>
+<script src="bower_components/angular-footable/dist/angular-footable.min.js"></script>
 
 <!-- Plugins-->
 <script src="https://use.fontawesome.com/f474efa969.js"></script>
