Vou criar um branch para tentar novamente a footable

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="bower_components/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="bower_components/select2/dist/css/select2.css"> <!-- Select 2 -->
     <link rel="stylesheet" href="bower_components/sweetalert/dist/sweetalert.css"> <!-- SweetAlert -->
+    <link rel="stylesheet" href="bower_components/sweetalert2/dist/sweetalert2.css"> <!-- SweetAlert 2 -->
     <link rel="stylesheet" href="bower_components/c3/c3.css">
     <link rel="stylesheet" href="bower_components/AngularJS-Toaster/toaster.css">
     <link rel="stylesheet" href="bower_components/metisMenu/dist/metisMenu.css">
@@ -60,12 +61,18 @@
 <!-- Plugins-->
 <script src="https://use.fontawesome.com/f474efa969.js"></script>
 
-<script src="bower_components/angular-sweetalert/SweetAlert.min.js"></script>
-<script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>
 
 <!-- AngularJS File Upload-->
 <script src="bower_components/ng-file-upload/ng-file-upload-shim.js"></script>
 <script src="bower_components/ng-file-upload/ng-file-upload.js"></script>
+
+<!--SweetAlert2-->
+<script src="bower_components/es6-promise/es6-promise.auto.js"></script>
+<!--<script src="bower_components/angular-sweetalert/SweetAlert.min.js"></script>-->
+<!--<script src="bower_components/sweetalert/dist/sweetalert.min.js"></script>-->
+<script src="bower_components/sweetalert2/dist/sweetalert2.js"></script>
+<!--<script src="bower_components/ngSweetAlert2/SweetAlert.js"></script>-->
+
 
 <script src="bower_components/metisMenu/dist/metisMenu.js"></script>
 
@@ -104,6 +111,7 @@
 <script src="app/config.js"></script>
 <script src="app/inspinia.js"></script>
 <script src="app/controllers.js"></script>
+<script src="app/services.js"></script>
 
 
 </body>
