ainda testando altearções na vista de edit.caixas

--- a/public/index.html
+++ b/public/index.html
@@ -89,6 +89,7 @@
 <script src="app/caixas/services/caixas.client.service.js"></script>
 <script src="app/caixas/services/caixas.client.component.js"></script>
 <script src="app/caixas/filters/caixas.client.filters.js"></script>
+<script src="app/caixas/directives/caixas.client.directives.js"></script>
 
 <!--Scripts Lancamentos-->
 <script src="app/lancamentos/lancamentos.client.module.js"></script>
