--- a/public/index.html
+++ b/public/index.html
@@ -48,7 +48,7 @@
 <script src="bower_components/angular-datepicker/dist/angular-datepicker.js"></script>
 <script src="bower_components/angular-moment-picker/dist/angular-moment-picker.js"></script>
 <script src="bower_components/iCheck/icheck.min.js"></script>
-
+<script src="bower_components/old-ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
 <!--Chart C3-->
 <script src="bower_components/d3/d3.min.js"></script>
 <script src="bower_components/c3/c3.min.js"></script>
