Sons de clicks adicionados com sucesso > push heroku

--- a/public/index.html
+++ b/public/index.html
@@ -61,6 +61,8 @@
 <!-- Plugins-->
 <script src="https://use.fontawesome.com/f474efa969.js"></script>
 
+<!-- ngAudio -->
+<script src="bower_components/angular-audio/app/angular.audio.js"></script>
 
 <!-- AngularJS File Upload-->
 <script src="bower_components/ng-file-upload/ng-file-upload-shim.js"></script>
