Consulta Dashboard implementada (ainda precisa ser ajustada) - agora vou colocar o flotChart

--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
 <script src="bower_components/AngularJS-Toaster/toaster.js"></script>
 <script src="bower_components/select2/dist/js/select2.full.js"></script>
 <script src="bower_components/angular-datepicker/dist/angular-datepicker.js"></script>
+<script src="bower_components/angular-moment/angular-moment.js"></script>
 <script src="bower_components/angular-moment-picker/dist/angular-moment-picker.js"></script>
 <script src="bower_components/iCheck/icheck.min.js"></script>
 <script src="bower_components/old-ui-bootstrap/ui-bootstrap-tpls-0.12.0.min.js"></script>
@@ -88,6 +89,7 @@
 <script src="app/caixas/caixas.client.module.js"></script>
 <script src="app/caixas/config/caixas.client.routes.js"></script>
 <script src="app/caixas/controllers/caixas.client.controller.js"></script>
+<script src="app/caixas/controllers/caixas-dashboard.client.controller.js"></script>
 <script src="app/caixas/services/caixas.client.service.js"></script>
 <script src="app/caixas/services/caixas.client.component.js"></script>
 <script src="app/caixas/filters/caixas.client.filters.js"></script>
